<resources>
    <string name="app_name">KotlinIntentParcelableStarter</string>
    <string name="welcome_vehicle_garage">Welcome Vehicle Garage</string>
    <string name="go_garage">Go Garage</string>
    <string name="next">NEXT</string>
    <string name="bike">Bike</string>
    <string name="car">Car</string>
    <string name="jeep">Jeep</string>
    <string name="select_your_vehicle">Select your Vehicle</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="red">RED</string>
    <string name="finish">FINISH</string>
    <string name="choose_your_fav_color">Choose your Fav Color</string>
</resources>
