<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.VehicleActivity" android:background="@android:color/holo_blue_light">

    <TextView
            android:text="@string/select_your_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="20sp"
            android:textColor="@android:color/white" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"/>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button4" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="18dp" android:layout_marginStart="18dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textColor="@android:color/white"
            android:background="@drawable/vehicle_button"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2">


        <ToggleButton
                android:text="@string/bike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:textOff="@string/bike"
                android:textOn="@string/bike" android:background="@drawable/vehicle_button"
                android:textColor="@android:color/white"/>
        <ToggleButton
                android:text="@string/car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:textOff="@string/car"
                android:textOn="@string/car" android:background="@drawable/vehicle_button"
                android:textColor="@android:color/white" android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>
        <ToggleButton
                android:text="@string/jeep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton4" android:textOff="@string/jeep"
                android:textOn="@string/jeep" android:background="@drawable/vehicle_button"
                android:textColor="@android:color/white"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>