<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.Controller.PaintColorActivity" android:background="@android:color/holo_blue_light">

    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/goGarageBtn2"
            android:textColor="@android:color/white"
            android:background="@drawable/vehicle_button"
            android:layout_marginEnd="18dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="18dp"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="18dp"
            android:layout_marginBottom="18dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"
            android:onClick="finishBtnClicked"/>
    <TextView
            android:text="@string/choose_your_fav_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="18sp"
            android:textColor="@android:color/white" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="88dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/guideline4">
        <ToggleButton
                android:text="@string/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/redBtn" android:layout_weight="1"
                android:textOff="@string/red" android:textOn="@string/red"
                android:background="@drawable/vehicle_button_toggle"
                android:textColor="@android:color/white" android:onClick="redBtnClicked"/>
        <ToggleButton
                android:text="@string/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/greenBtn" android:layout_weight="1"
                android:textOff="@string/green" android:textOn="@string/green"
                android:background="@drawable/vehicle_button_toggle"
                android:textColor="@android:color/white" android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" android:onClick="greenBtnClicked"/>
        <ToggleButton
                android:text="@string/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/blueBtn" android:layout_weight="1"
                android:textOff="@string/blue" android:textOn="@string/blue"
                android:background="@drawable/vehicle_button_toggle"
                android:textColor="@android:color/white" android:onClick="blueBtnClicked"/>
    </LinearLayout>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline4"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.45"/>
</android.support.constraint.ConstraintLayout>